fix minor layout issues

--- a/public/stylesheets/aboutMe.css
+++ b/public/stylesheets/aboutMe.css
@@ -1,16 +1,17 @@
 #about-me-text {
     line-height: 1.5;
     text-align: justify;
-    background-color: rgba(255, 255, 255, 0.5);
-}
-
-#about-me-text h5 {
-    margin-bottom: 1rem;
-    padding-top: 1rem;
+    background-color:rgb(255, 255, 255)
 }
 
 #about-me-photo {
     max-width: 400px;
-    background-color: rgba(255, 255, 255, 0.5);
-    padding-left: 0;
+    padding: 0;
+}
+
+@media (max-width:768px) { 
+    #about-me-photo, #about-me-text  {
+        max-width: 80%;
+    }
+
 }
