--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -58,8 +58,7 @@ body {
 
 main {
     align-items: center;
-    margin-left: 15%;
-    margin-right: 15%;
+    margin: 3% 20%;
 }
 
 .navbar, .footer {
@@ -78,7 +77,7 @@ main {
     top: 0.4rem;
     }
 
-.nav-link {
+.nav-item {
     text-align: center;
     margin-left: auto;
     margin-right: auto;
@@ -264,3 +263,4 @@ background-repeat: no-repeat;
   #pshoot-img {
       max-height: 374px;
        max-width: 562px; */
+
