--- a/public/stylesheets/contact.css
+++ b/public/stylesheets/contact.css
@@ -2,7 +2,6 @@
 #contact {
     align-items: center;
     background-color: rgb(255, 255, 255, 0.6);
-    margin-right: 0px;
     line-height: 1.5;
 }
     
